2005-12-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
	(gst_ffmpeg_pixfmt_to_caps), (gst_ffmpeg_caps_to_pixfmt),
	(gst_ffmpeg_caps_with_codecid), (gst_ffmpeg_caps_to_codecid):
	* ext/ffmpeg/gstffmpegcodecmap.h:
	* ext/ffmpeg/gstffmpegdeinterlace.c:
	(gst_ffmpegdeinterlace_pad_link), (gst_ffmpegdeinterlace_init),
	(gst_ffmpegdeinterlace_chain):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_class_init),
	(gst_ffmpegenc_chain_audio):
	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_loop):
	* ext/ffmpeg/gstffmpegprotocol.c: (gst_ffmpegdata_write):
	* ext/ffmpeg/gstffmpegscale.c: (gst_ffmpegscale_pad_link),
	(gst_ffmpegscale_init), (gst_ffmpegscale_chain),
	(gst_ffmpegscale_change_state):
	* ext/libpostproc/gstpostproc.c: (change_context), (change_mode),
	(gst_postproc_base_init), (gst_postproc_class_init),
	(gst_postproc_init), (gst_postproc_link), (gst_postproc_chain),
	(gst_postproc_change_state), (gst_postproc_set_property),
	(gst_postproc_get_property), (gst_postproc_register):
	  expand tabs

=== release 0.10.0 ===

2005-12-05   <thomas (at) apestaart (dot) org>

	* configure.ac:
	  releasing 0.10.0, "Rocamadour"

2005-12-05  Andy Wingo  <wingo@pobox.com>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_get_buffer),
	(gst_ffmpegdec_frame):
	* ext/ffmpeg/gstffmpegdeinterlace.c: (gst_ffmpegdeinterlace_chain):
	* ext/ffmpeg/gstffmpegscale.c: (gst_ffmpegscale_chain): Update for
	alloc_buffer changes.

=== release 0.9.7 ===

2005-12-01   <thomas (at) apestaart (dot) org>

	* configure.ac:
	  releasing 0.9.7, "Mein Hund Hat Keine Nase"

2005-11-28  Julien MOUTTE  <julien@moutte.net>

	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_class_init),
	(gst_ffmpegenc_init), (gst_ffmpegenc_getcaps),
	(gst_ffmpegenc_setcaps), (gst_ffmpegenc_set_property),
	(gst_ffmpegenc_get_property): Add rtp-payload-size property.

2005-11-28  Tim-Philipp Müller  <tim at centricular dot net>
